teamapps-client/less/components/UiPanel.less
/*-
 * ========================LICENSE_START=================================
 * TeamApps
 * ---
 * Copyright (C) 2014 - 2022 TeamApps.org
 * ---
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 *      http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * =========================LICENSE_END==================================
 */
.UiPanel {
  background-color: var(--ta-bg-color);
  border-radius: var(--ta-border-radius);
  background-size: cover;

  box-shadow: var(--ta-box-shadow-base);
  overflow: hidden;

  border: none;

  display: flex;
  flex-direction: column;

  margin: 0;

  .panel-heading {
    flex: 0 0 auto;
    min-height: 32px;
    display: flex;
    align-items: center;
    border-top-left-radius: calc(var(--ta-border-radius) - 1px);
    border-top-right-radius: calc(var(--ta-border-radius) - 1px);
    border-bottom: 1px solid var(--ta-inner-border-color);
    padding: 0 1px 0 8px;
    background-color: var(--ta-bg-color-semi-transparent);

    .optimized-for-touch & {
      min-height: 40px;
    }

    .panel-icon {
      flex: 0 0 auto;
      margin-right: 7px;
      .single-line-snipper();
    }

    .panel-title {
      flex: 0 0 auto;
      padding-right: 7px;
      font-size: 15px;
      .single-line-snipper();
    }

    > .panel-component-wrapper {
      flex: 0 0 auto; // derived from subcomponents
      display: flex;

      > .icon-and-field-wrapper {
        display: flex;
        flex: 0 0 auto; // derived from subcomponents
        align-items: center;
        background-color: rgba(255, 255, 255, .5);
        border-radius: var(--ta-border-radius);
        > .icon {
          align-self: stretch;
          height: auto;
          padding: 0 15px;
          border: 1px solid transparent;
          border-right-width: 0;
          border-top-left-radius: var(--ta-border-radius);
          border-bottom-left-radius: var(--ta-border-radius);
          .optimized-for-touch & {
            padding: 0 20px;
          }
        }
        > .field-wrapper {
          flex: 0 0 auto; // width will be set by javascript
          transition: width .5s, flex-basis .5s;

          .default-min-field-width {
            min-width: 0 !important;
          }

          .UiField:not(.focus) .field-border {
            transition: border-color 1s, background-color 1s, box-shadow 1s;
            background-color: transparent;
            border-color: transparent;
          }
        }
      }

      &.display-icon .field-wrapper {
        .tr-input-wrapper,
        .form-control {
          border-top-left-radius: 0;
          border-bottom-left-radius: 0;
        }
      }
      &:not(.display-icon) > .icon-and-field-wrapper > .icon {
        display: none;
      }
      &.minimized {
        > .icon-and-field-wrapper {
          > .icon {
            border-right-width: 1px;
            border-top-right-radius: var(--ta-border-radius);
            border-bottom-right-radius: var(--ta-border-radius);
          }
          > .field-wrapper {
            flex: 0 0 0px !important;
            width: 0 !important;
            overflow: hidden;
          }
        }
      }
    }

    .panel-heading-spacer {
      flex: 1 0 3px;
    }

    .panel-heading-buttons {
      flex: 0 0 auto;
      padding: 1px 4px 0 4px;
      display: flex;
      align-self: flex-start;
      margin-top: 1px;
    }

    .panel-heading-window-buttons {
      -webkit-box-flex: 0;
      flex: 0 0 auto;
      padding: 2px 3px;
      display: -webkit-box;
      display: flex;
      align-self: flex-start;
      border-left: 1px solid var(--ta-special-button-section-border);
      border-bottom: 1px solid var(--ta-special-button-section-border);
      background-color: var(--ta-special-button-section-bg);
      border-top-right-radius: var(--ta-border-radius);
      border-bottom-left-radius: calc(var(--ta-border-radius) + 2px);

      &:empty {
        display: none;
      }

    }
  }

  .toolbar-container {
    flex: 0 0 auto;
  }

  .panel-body {
    flex: 1 1 auto;
    overflow-x: hidden;
    overflow-y: auto;
    padding: 0;
    background-color: var(--ta-bg-color);
    border-bottom-left-radius: var(--ta-border-radius);
    border-bottom-right-radius: var(--ta-border-radius);
  }

  &.stretch-content > .panel-body{
    // ==== START Safari Mobile flex:auto + 100% fix ====
    // If height is not set, Safari Mobile does not apply the 100% to the child, since the .panel-body does not have a definite size.
    // The value 123px is completely arbitrary. However, it makes safari regard the calculated panel body height as definite
    // (but will obviously still applying the flex policy!!) and will stretch/shrink the child to 100%.
    // Note that this behavior regarding indefinite size containers WAS at some point (till September 2017) according to the spec,
    // but the standard was changed.
    height: 123px; // TODO remove once Safari Mobile gets this right... (Safari desktop does already)
    // Note that this makes browsers unable to apply auto-height on windows (i.e. make the height of the panel depend on its content).
    // Therefore, if the height of a window is set to < 0, the stretch-content class will be removed. (see Java code)
    // #safariflex
    // ==== END Safari Mobile flex:auto + 100% fix ====

    > * {
      width: 100%;
      height: 100%;
    }
  }
}

.teamapps-component-maximized {
  position: fixed;
  z-index: var(--ta-zindex-window);
  top: 5px;
  left: 5px;
  width: ~"calc(100% - 10px)";
  height: ~"calc(100% - 10px)";
  box-shadow: 0 0 0 10px var(--ta-bg-dim-overlay);
}

